--- a/conFusion/src/pages/menu/menu.html
+++ b/conFusion/src/pages/menu/menu.html
@@ -16,6 +16,24 @@
 </ion-header>
 
 
-<ion-content padding>
-
+<ion-content class="card-background-image">
+  <div *ngIf="dishes">
+    <ion-card *ngFor="let dish of dishes">
+      <img src="{{ BaseURL + dish.image }}" />
+      <div class="card-title">
+        {{ dish.name }}
+      </div>
+      <div class="card-subtitle">
+        {{ dish.description }}
+      </div>
+    </ion-card>
+  </div>
+  <div [hidden]="dish || dishErrMess">
+    <ion-spinner></ion-spinner>
+    <h4>Loading... Please wait!</h4>
+  </div>
+  <div *ngIf="dishErrMess">
+    <h2>Error</h2>
+    <h4>{{ dishErrMess }}</h4>
+  </div>
 </ion-content>
