--- a/conFusion/src/pages/menu/menu.html
+++ b/conFusion/src/pages/menu/menu.html
@@ -18,7 +18,7 @@
 
 <ion-content class="card-background-image">
   <div *ngIf="dishes">
-    <ion-card *ngFor="let dish of dishes">
+    <ion-card *ngFor="let dish of dishes" (click)="dishSelected($event, dish)">
       <img src="{{ BaseURL + dish.image }}" />
       <div class="card-title">
         {{ dish.name }}
@@ -28,12 +28,12 @@
       </div>
     </ion-card>
   </div>
-  <div [hidden]="dish || dishErrMess">
+  <div [hidden]="dish || errMess">
     <ion-spinner></ion-spinner>
     <h4>Loading... Please wait!</h4>
   </div>
   <div *ngIf="dishErrMess">
     <h2>Error</h2>
-    <h4>{{ dishErrMess }}</h4>
+    <h4>{{ errMess }}</h4>
   </div>
 </ion-content>
